log
Thu 20 Apr 2023 09:22:59 PM UTC: 
 tests:  1|8
total_score: 0/70
eb693d5
Thu 20 Apr 2023 11:24:42 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
459e996
Fri 21 Apr 2023 12:54:04 PM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   75 |     TreeNode * aux;
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
f0634a3
Fri 21 Apr 2023 12:54:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   75 |     TreeNode * aux;
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
e46b971
Fri 21 Apr 2023 12:54:34 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
a42c02a
Fri 21 Apr 2023 12:57:52 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
c32834c
Fri 21 Apr 2023 12:59:30 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4d9eeb9
Fri 21 Apr 2023 01:04:05 PM UTC: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  6|7
total_score: 5/70
8f03d45
